tests/bad_literal.b
main() {
    auto s, c;
    s = "
        THIS
        IS
        MULTILINE
        STRING
    ";
    c = '
    ';
    return (0);
}
